--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 
 
     <!-- carta -->
-    <div class="d-flex justify-content-evenly">
-        <div class="card " style="width: 18rem;">
+    <div class="d-flex justify-content-evenly row">
+        <div class="card col-lg-3  col-md-6 col-sm-12 " style="width: 18rem;">
             <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -91,7 +91,7 @@
             </div>
         </div>
 
-        <div class="card " style="width: 18rem;">
+        <div class="card col-lg-3  col-md-6 col-sm-12" style="width: 18rem;">
             <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -101,7 +101,7 @@
             </div>
         </div>
 
-        <div class="card " style="width: 18rem;">
+        <div class="card col-lg-3  col-md-6 col-sm-12 " style="width: 18rem;">
             <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
